--- a/snapserver.conf
+++ b/snapserver.conf
@@ -1,3 +1,9 @@
 [stream]
 stream = pipe:///tmp/snapfifo?name=Mopidy&sampleformat=48000:16:2&codec=flac&mode=create
 stream = pipe:///tmp/ttsfifo?name=TTS&mode=create
+
+[http]
+enabled = true
+bind_to_address = 0.0.0.0
+port = 1780
+doc_root = /www
