--- a/snapserver.conf
+++ b/snapserver.conf
@@ -1,6 +1,6 @@
 [stream]
-stream = pipe:///tmp/snapfifo?name=Mopidy&sampleformat=48000:16:2&codec=flac&mode=create
-stream = pipe:///tmp/ttsfifo?name=TTS&mode=create
+stream = pipe:///tmp/snapcast/snapfifo?name=Mopidy&sampleformat=48000:16:2&codec=flac&mode=create
+stream = pipe:///tmp/snapcast/ttsfifo?name=TTS&mode=create
 
 [http]
 enabled = true
